# fitconnect-sdk-python

./: .gitignore  README.md  chkdestination.py  find_destination.py  fitconnect.py  pyproject.toml  read_config.py  sender.py  subscriber.py
conf/: destinaton.yaml.example  find_destination.yaml.example  sender.yaml.example  subscriber.yaml.example
fitconnect/: __init__.py  fitconnect.py
fitconnect/schema/: metadata.schema.v1.0.0.json
