[tool.poetry]
name = "fitconnect"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
#jwcrypto = "^1.1"
jwcrypto = { git = "https://github.com/latchset/jwcrypto.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
