[tool.poetry]
name = "fitconnect"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.26.0"
#jwcrypto = "^1.1"
jwcrypto = { git = "https://github.com/latchset/jwcrypto.git" }
strictyaml = "^1.6.1"
jsonschema = "^4.4.0"
semver = { version = "^3.0.0.dev3", allow-prereleases = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
