[tool.poetry]
name = "fitconnect"
version = "0.4.2"
description = ""
authors = ["Your Name <you@example.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.26.0"
jwcrypto = "^1.4"
strictyaml = "^1.6.1"
jsonschema = "^4.4.0"
semver = { version = "^3.0.0.dev3", allow-prereleases = true }

[tool.poetry.dev-dependencies]
jwcrypto = { git = "https://github.com/latchset/jwcrypto.git" }

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
